--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -39,26 +39,26 @@ on init
     start hwservicemanager
     setprop crypto.ready 1
 
-service qseecomd /system/sbin/qseecomd
+service qseecomd /system/bin/qseecomd
     user root
     group root
     disabled
     seclabel u:r:recovery:s0
 
-service hwservicemanager /system/sbin/hwservicemanager
+service hwservicemanager /system/bin/hwservicemanager
     user root
     group root
     disabled
     onrestart setprop hwservicemanager.ready false
     seclabel u:r:recovery:s0
 
-service servicemanager /system/sbin/servicemanager
+service servicemanager /system/bin/servicemanager
     user root
     group root readproc
     disabled
     seclabel u:r:recovery:s0
 
-service keystore_auth /system/sbin/keystore_auth
+service keystore_auth /system/bin/keystore_auth
     oneshot
     user system
     group root
@@ -66,19 +66,19 @@ service keystore_auth /system/sbin/keystore_auth
     seclabel u:r:recovery:s0
 
 # keystore is started and stopped on demand by TWRP
-service keystore /system/sbin/keystore /tmp/misc/keystore
+service keystore /system/bin/keystore /tmp/misc/keystore
     user root
     group root drmrpc readproc
     disabled
     seclabel u:r:recovery:s0
 
-service gatekeeper-1-0 /system/sbin/android.hardware.gatekeeper@1.0-service-qti
+service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service-qti
     user root
     group root
     disabled
     seclabel u:r:recovery:s0
 
-service keymaster-3-0 /system/sbin/android.hardware.keymaster@3.0-service-qti
+service keymaster-3-0 /system/bin/android.hardware.keymaster@3.0-service-qti
     user root
     group root
     disabled
